--- a/content/themes/type/partials/sidebar.hbs
+++ b/content/themes/type/partials/sidebar.hbs
@@ -2,6 +2,10 @@
 
 	{{> widgets/widget-about}}
 
-	{{!> widgets/widget-side-menu}}
+	{{> widgets/widget-must-read}}
+
+	{{> widgets/widget-side-menu}}
+
+	{{> widgets/widget-dribbble}}
 
 </div>
