--- a/content/themes/type/partials/sidebar.hbs
+++ b/content/themes/type/partials/sidebar.hbs
@@ -2,10 +2,10 @@
 
 	{{> widgets/widget-about}}
 
-	{{> widgets/widget-must-read}}
+	{{!> widgets/widget-must-read}}
 
-	{{> widgets/widget-side-menu}}
+	{{!> widgets/widget-side-menu}}
 
-	{{> widgets/widget-dribbble}}
+	{{!> widgets/widget-dribbble}}
 
 </div>
