--- a/content/themes/type/partials/page-header.hbs
+++ b/content/themes/type/partials/page-header.hbs
@@ -11,8 +11,10 @@
 		<nav id="nav">
 			<ul class="clearfix">
 				<li><a href="{{@blog.url}}">Home</a></li>
-				<li><a href="/about-type/">About</a></li>
-				<li><a href="#">Purchase</a></li>
+				<li><a href="/about/">About</a></li>
+				<li><a href="/framework">Framework</a></li>
+				<li><a href="/case-studies">Case Studies</a></li>
+				<li><a href="/contact">Contact</a></li>
 			</ul>
 		</nav>
 
