--- a/content/themes/type/partials/heroes/page-hero-error.hbs
+++ b/content/themes/type/partials/heroes/page-hero-error.hbs
@@ -5,7 +5,7 @@
 {{/if}}
 	<div class="hero-content">
 		<div class="container">
-			<h1 class="hero-title">Awww, that {{code}} error!</h1>
+			<h1 class="hero-title">{{code}} error!</h1>
 			<p class="intro">{{message}}<br>
 			Go to <a href="{{@blog.url}}">home page</a>?</p>
 		</div>
