--- a/content/themes/type/partials/heroes/page-hero-home.hbs
+++ b/content/themes/type/partials/heroes/page-hero-home.hbs
@@ -5,8 +5,8 @@
 {{/if}}
 	<div class="hero-content">
 		<div class="container">
-			<h1 class="hero-title">The Daily Innovator</h1>
-			<p class="intro">Realizing opportunities is about seeing and making things happen.</p>
+			<h1 class="hero-title">Realizing opportunities</h1>
+			<p class="intro">is about seeing and making things happen.</p>
 		</div>
 	</div>
 </section>
