--- a/content/themes/type/default.hbs
+++ b/content/themes/type/default.hbs
@@ -7,13 +7,15 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="HandheldFriendly" content="True">
 		<meta name="MobileOptimized" content="320">
-		<meta name="author" content="QBKL, http://themeforest.net/user/QBKL">
-
+	
 		{{! Page Meta }}
 		<title>{{meta_title}}</title>
 		<meta name="description" content="{{meta_description}}">
 
 		<!-- Loading: Fonts -->
+		<script src="//use.typekit.net/uhv4wco.js"></script>
+		<script>try{Typekit.load();}catch(e){}</script>
+
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
