--- a/content/themes/type/assets/css/color-themes.css
+++ b/content/themes/type/assets/css/color-themes.css
@@ -22,7 +22,7 @@ Type Theme for Ghost - Color Themes
 	background: -o-linear-gradient(-45deg,#1F0578 0%,#300ab2 100%);
 	background: -ms-linear-gradient(-45deg,#1F0578 0%,#300ab2 100%);
 	background: linear-gradient(135deg,#1F0578 0%,#300ab2 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1F0578',endColorstr='#300ab2',GradientType=1);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1F0578',endColorstr='#fdfdfd',GradientType=1);
 }
 .theme-daily-innovator .color-bg {
 	background-color: #1F0578;
