--- a/content/themes/type/index.hbs
+++ b/content/themes/type/index.hbs
@@ -11,7 +11,7 @@
 	<div class="container">
 		<div class="row">
 
-			{{> archives/posts-list}}
+			{{> archives/posts-sidebar}}
 			{{! This includes the page-hero.hbs partial }}
 			{{! Explore more display option by including either 'posts-list-sidebar', 'posts-duogrid' or 'posts-triogrid' }}
 
