--- a/content/themes/type/partials/widgets/widget-about.hbs
+++ b/content/themes/type/partials/widgets/widget-about.hbs
@@ -4,9 +4,9 @@
 
 	<ul class="social-profiles">
 
-		<li><a href="#" class="social-button social-twitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+		<li><a href="https://www.twitter.com/@InnovationExec" class="social-button social-twitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
 
-		<li><a href="#" class="social-button social-linkedin" title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
+		<li><a href="https://www.linkedin.com/in/amyradin" class="social-button social-linkedin" title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
 		<li><a href="{{@blog.url}}/rss/" class="social-button social-rss" title="Subscribe to RSS"><i class="fa fa-rss"></i></a></li>
 
 	</ul>
