--- a/content/themes/type/partials/page-footer.hbs
+++ b/content/themes/type/partials/page-footer.hbs
@@ -1,6 +1,7 @@
 <footer id="footer">
 	<div class="container text-center">
-		<p>&copy; Copyright <a href="/" class="link">{{@blog.title}}</a> / All rights reserved.</p>
+		<!-- <p>&copy; Copyright <a href="/" class="link">{{@blog.title}}</a> / All rights reserved.</p> -->
+		<p>&copy; Copyright Amy Radin All rights reserved.</p>
 
 	</div>
 </footer>
