--- a/content/themes/type/partials/page-header.hbs
+++ b/content/themes/type/partials/page-header.hbs
@@ -10,7 +10,7 @@
 
 		<nav id="nav">
 			<ul class="clearfix">
-				<li><a href="{{@blog.url}}">The Daily Innovator Blog &reg;</a></li>
+				<li><a href="{{@blog.url}}">The Daily Innovator &reg; Blog</a></li>
 				<li><a href="/about">About</a></li>
 				<li><a href="/framework">Framework</a></li>
 				<li><a href="/problem-solving">Problem Solving</a></li>
