--- a/content/themes/type/assets/css/color-themes.css
+++ b/content/themes/type/assets/css/color-themes.css
@@ -33,10 +33,10 @@ Type Theme for Ghost - Color Themes
 .theme-daily-innovator .post-content .read-more:hover,
 .theme-daily-innovator .widget-title::after,
 .theme-daily-innovator .social-button:hover {
-	background-color: #1F0578;
+	background-color: #9fbb58;
 }
 .theme-daily-innovator .post-info .fa-star {
-	color: #1F0578;
+	color: #9fbb58;
 }
 
 .theme-daily-innovator #hero.dark-font,
