no hardcoded copy

--- a/content/themes/type/partials/heroes/page-hero-home.hbs
+++ b/content/themes/type/partials/heroes/page-hero-home.hbs
@@ -5,8 +5,10 @@
 {{/if}}
 	<div class="hero-content">
 		<div class="container">
-			<h1 class="hero-title">Realizing opportunities</h1>
-			<p class="intro">is about seeing and making things happen.</p>
+			<!-- <h1 class="hero-title">An unexpected combination</h1>
+			<p class="intro">of insight, reinvention, and pragmatism</p> -->
+			<!-- <h1 class="hero-title">Connecting companies to consumers to create new growth</h1> -->
+			<!-- <p class="intro">An unexpected combination of insight, reinvention, and pragmatism in financial services and insurance</p> -->
 		</div>
 	</div>
 </section>
